[gd_scene load_steps=9 format=3 uid="uid://cqrc3r1bij4br"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_6ofhi"]
[ext_resource type="Texture2D" uid="uid://d3cawymryc8q5" path="res://assets/textures/bg.png" id="1_wqpsg"]
[ext_resource type="PackedScene" uid="uid://kflk33pgif8l" path="res://scenes/player.tscn" id="2_aqcy6"]
[ext_resource type="PackedScene" uid="uid://cjjieoyjnjcaf" path="res://scenes/hud.tscn" id="2_yxxl7"]
[ext_resource type="PackedScene" uid="uid://c0tn7qebqrmiy" path="res://scenes/enemy_spawner.tscn" id="4_nn44e"]
[ext_resource type="AudioStream" uid="uid://dwse46ccn66de" path="res://assets/audio/hit.wav" id="6_gi4xq"]
[ext_resource type="AudioStream" uid="uid://qkx0pj0150sv" path="res://assets/audio/explode.wav" id="7_weypj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v1cy"]
size = Vector2(210, 887)

[node name="Game" type="Node2D"]
script = ExtResource("1_6ofhi")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_yxxl7")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1278.0
offset_bottom = 719.0
texture = ExtResource("1_wqpsg")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_aqcy6")]
position = Vector2(101, 378)

[node name="EnemySpawner" parent="." instance=ExtResource("4_nn44e")]

[node name="Deathzone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-172, 368)
shape = SubResource("RectangleShape2D_2v1cy")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gi4xq")

[node name="PlayerTookDamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_weypj")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_enemy_entered_deathzone"]
